--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,13 +17,16 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
-        cache: gradle
 
     - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+      run: |
+        chmod +x gradlew || true
 
     - name: Build with Gradle
-      run: ./gradlew assembleDebug
+      uses: gradle/gradle-build-action@v3
+      with:
+        gradle-version: 8.4
+        arguments: assembleDebug
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
